--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Food Log Microservice",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/rowanbignell/cs361-rowanbignell-microservice-a#readme",
   "dependencies": {
     "express": "^4.21.2",
+    "nanoid": "^3.3.8",
     "nodemon": "^3.1.9"
   }
 }
